<resources>
    <string name="app_name">shareRoutes</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="location_permission_alert_title">Location Permission</string>
    <string name="location_permission_alert_desc">The app needs access to your location in order to suggest routes.</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="permission_intro">The app needs access to your location in order to suggest routes and/or share routes to the other users.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="main_fragment">Home</string>
    <string name="login_fragment">Login Page</string>
    <string name="login_email">Login email: </string>
    <string name="button_send">Send</string>
    <string name="create_account">Create New Account</string>
    <string name="create_account_title">Create Account</string>
    <string name="button_login">Login</string>
    <string name="password">Password: </string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration_failure_alert_title">Failed to register</string>
    <string name="registration_failure_alert_desc">Failed to register user.  Server is busy.  Please try again later.</string>
    <string name="login_failure_alert_title">Failed to Login</string>
    <string name="login_failure_alert_desc">Failed to login user.  Either the password is incorrect or the email not exist.</string>
    <string name="email_exists_alert_title">Email already exists</string>
    <string name="email_exists_alert_desc">The email you entered already exists in the database.  You can try to login again.  Or, you can use another email to register a new account.</string>
    <string name="create_account_page">Create Account</string>
    <string name="permission_page">Permissions</string>
    <string name="share_routes_button">Share a route</string>
    <string name="suggest_routes_button">Get suggested routes</string>
    <string name="share_a_route_title">Share a Route</string>
    <string name="add_marker_alert_title">Add Marker</string>
    <string name="add_marker_alert_desc">Do you want to add a marker on where you tapped?</string>
    <string name="add_button">Add</string>
    <string name="explain_route_creation">You can tap on the map to add a marker.  The app will try to connect all the markers to create a route.  Or you can tap the record button to record the route as you walk along.</string>
    <string name="maximum_distance_exceed_alert_title">Maximum Distance</string>
    <string name="maximum_distance_exceed_alert_desc">The app restricted the maximum distance of the route to be 5000 km.  Please choose another place.</string>
    <string name="markers_num_alert_title">Number of Markers</string>
    <string name="marker_num_alert_desc">There is not enough marker to create a route.  Please add up to 10 markers.</string>
    <string name="create_route_intro_alert_title">Create a Route</string>
    <string name="create_route_intro_alert_desc">You can tap on the map to add a marker.  The app will try to connect all the markers to create a route.</string>
    <string name="confirm_button">Confirm</string>
    <string name="remove_marker_alert_title">Remove Marker</string>
    <string name="remove_marker_alert_desc">Do you want to remove the marker?</string>
    <string name="max_markers_alert_title">Number of Markers</string>
    <string name="max_markers_alert_desc">You can only add up to 10 markers.</string>
    <string name="app_title">Sharing Routes</string>
    <string name="home">Home Screen</string>
    <string name="clean_route_line_alert_title">Clean route line</string>
    <string name="clean_route_line_alert_desc">Do you want to clean the previous route created, and create a new one?</string>
    <string name="clean_route_button">Clean</string>
    <string name="share_success_alert_title">Successfully shared route.</string>
    <string name="share_success_alert_desc">The route has been successfully shared!</string>
    <string name="map_button">Map</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="logout">Logout</string>
    <string name="suggest_routes">Suggest Routes</string>
    <string name="share_route">Share Route</string>
    <string name="my_location">My Location</string>
    <string name="create_route">Create Route</string>
    <string name="share">Share</string>
    <string name="clear_path">Clear Path</string>
    <string name="restart">Restart</string>
    <string name="clear_route">Clear route</string>
    <string name="close_suggestions">Close suggestions</string>
    <string name="map_intro_message">The app provides a place for dog owners to share dog walk routes. The user can share routes as well as getting suggestions of routes near a chosen location.</string>
    <string name="user_account_title">User Account  -  %s</string>
    <string name="update_account_message">Please fill in the field you want to update and click submit button. Notice that if you are changing your password, you need to enter current password, new password and confirm password.</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="require_password_alert_title">Password Confirmation</string>
    <string name="require_password_alert_desc">Password is required to change the email.  We need to do re-authentication.  Thanks.</string>
    <string name="null_password_alert_title">Empty Password</string>
    <string name="null_password_alert_desc">Password can\'t be empty.</string>
    <string name="update_email_server_error_alert_title">Update Email Error</string>
    <string name="update_email_server_error_alert_desc">There is error in the server when updating the email.  Please try again later.</string>
    <string name="update_email_data_error_alert_title">Update Email Error</string>
    <string name="update_email_data_error_alert_desc">There is error when getting user\'s information.  Please logout and login again and try.</string>
    <string name="update_email_password_error_alert_title">Update Email Error</string>
    <string name="update_email_password_error_alert_desc">There is error when logging in user\'s account to change the email.  Please make sure the password is correct.  Please enter the password again.</string>
    <string name="update_email_success_alert_title">Updated Email</string>
    <string name="update_email_success_alert_desc">The email has been updated successfully.  But since the email is the login key, you need to login again now.  Please use the new email to login.</string>
    <string name="update_password_data_error_alert_title">Update Password Error</string>
    <string name="update_password_data_error_alert_desc">There is error when getting user\'s information.  Please logout and login again and try.</string>
    <string name="update_password_server_error_alert_title">Update Password Error</string>
    <string name="update_password_server_error_alert_desc">There is error in the server when updating the password.  Please try again later.</string>
    <string name="update_password_login_alert_title">Update Password Error</string>
    <string name="update_password_login_alert_desc">There is error when logging in user\'s account to change the password.  Please make sure the current password is correct.  Please enter the current password again.</string>
    <string name="update_password_success_alert_title">Updated Password</string>
    <string name="update_password_success_alert_desc">The password has been updated successfully.  Since you changed the password, you need to login again.</string>
    <string name="share_the_route_alert_title">Share the Route</string>
    <string name="share_the_route_alert_desc">The route will be saved in the database.  It will be suggested to the other users.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="empty_email_alert_title">Empty Email</string>
    <string name="empty_email_alert_desc">Email must not be empty.</string>
    <string name="forgot_password_alert_title">Forgot Password</string>
    <string name="forget_password_alert_desc">Please enter your email: </string>
    <string name="reset_password_success_alert_title">Reset Password Email</string>
    <string name="reset_password_success_alert_desc">The reset password email has been successfully sent to your email.  Please click the reset link in your email.  If you can\'t find the email, please also check the spam folder.</string>
    <string name="reset_password_failure_alert_title">Reset Password Email</string>
    <string name="reset_password_failure_alert_desc">There is error sending the reset password email.  Please make sure this email is the one registered in the app.</string>
    <string name="map_intro">The app provides a place for dog owners to share dog walk routes. The user can share routes as well as getting suggestions of routes near a chosen location.</string>

</resources>

<!--
<string name="explain_route_creation">You can tap on the map to add a marker.  The app will try to connect all the markers to create a route.  Or you can tap the record button to record the route as you walk along.</string>
-->